# inox-lang

./: .gitignore  Cargo.toml  LICENSE  example.in  rustc  test  test.rs
base/: Cargo.toml
frontend/: Cargo.toml
frontend/src/: codegen.rs  lib.rs  scope.rs
frontend/src/ast/: desugar.rs  mod.rs
frontend/src/tpck/: mod.rs
inoxc/: Cargo.toml
inoxc/src/: main.rs
symbol/: Cargo.toml
symbol/src/: id.rs  lib.rs  pos.rs  typ.rs
syntax/: Cargo.toml  build.rs
syntax/src/: fold.rs  lib.rs  visit.rs
syntax/src/ast/: name.rs
syntax/src/cst/: expr.rs  mod.rs  stmt.rs  typ.rs
syntax/src/lexer/: error.rs  escaped.rs  lexer.rs  mod.rs  numeric.rs  token.rs
syntax/src/parser/: error.rs  grammar.lalrpop  mod.rs
